--- a/index.ipynb
+++ b/index.ipynb
@@ -348,7 +348,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append ="
+    "countries.append = ('Malta')"
    ]
   },
   {
