--- a/index.ipynb
+++ b/index.ipynb
@@ -399,7 +399,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "countries.append('Malta')"
+   ]
   },
   {
    "cell_type": "markdown",
