Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -409,7 +409,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append(Thail)"
+    "countries.append('Thailand')"
    ]
   },
   {
