Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -605,11 +605,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-16-90bfe046d2c7>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-90bfe046d2c7>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    #'South Korea', 'USA', 'Morocco', 'Malta', 'Finland']\u001b[0m\n\u001b[0m                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
-    "unique_countries "
+    "unique_countries = ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
+    "#'South Korea', 'USA', 'Morocco', 'Malta', 'Finland']"
    ]
   },
   {
