--- a/index.ipynb
+++ b/index.ipynb
@@ -618,7 +618,7 @@
     }
    ],
    "source": [
-    "unique_countries = ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
+    "unique_countries['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
     "#'South Korea', 'USA', 'Morocco', 'Malta', 'Finland']"
    ]
   },
