Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -593,17 +593,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-18-a1b61171879d>, line 2)",
+     "evalue": "unexpected EOF while parsing (<ipython-input-19-90bfe046d2c7>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-a1b61171879d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    #'South Korea', 'USA', 'Morocco', 'Malta', 'Finland'] # Note: order of countries may be different\u001b[0m\n\u001b[0m                                                                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-19-90bfe046d2c7>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    #'South Korea', 'USA', 'Morocco', 'Malta', 'Finland']\u001b[0m\n\u001b[0m                                                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
      ]
     }
    ],
