--- a/index.ipynb
+++ b/index.ipynb
@@ -609,7 +609,7 @@
    ],
    "source": [
     "unique_countries = ['Croatia', 'Argentina', 'Canada', 'Mexico', 'Italy', \n",
-    "#'South Korea', 'USA', 'Morocco', 'Malta', 'Finland']"
+    "'South Korea', 'USA', 'Morocco', 'Malta', 'Finland']"
    ]
   },
   {
