--- a/index.ipynb
+++ b/index.ipynb
@@ -605,10 +605,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Croatia',\n",
+       " 'Argentina',\n",
+       " 'Canada',\n",
+       " 'Mexico',\n",
+       " 'Italy',\n",
+       " 'South Korea',\n",
+       " 'USA',\n",
+       " 'Morocco',\n",
+       " 'Malta',\n",
+       " 'Finland']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_countries"
+   ]
   },
   {
    "cell_type": "markdown",
