--- a/index.ipynb
+++ b/index.ipynb
@@ -644,7 +644,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len unique_countries\n"
+   ]
   },
   {
    "cell_type": "code",
