--- a/index.ipynb
+++ b/index.ipynb
@@ -664,7 +664,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len (unique_countries)"
+   ]
   },
   {
    "cell_type": "code",
